@@ -2,6 +2,7 @@
     from ABGH)
   * Support databases from KeePass 1.20 (closes: #197)
   * Handle spaces correctly when browsing for keyfiles (closes: #163)
+  * Don't clear password when browsing for a keyfile (closes: #166)
 
 KeePassDroid (1.9.2)
   * Fix date display in .kdbx entries
